[package]
name = "stream_of_conciousness_bot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "stream_of_conciousness_bot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "*"
log = "*"
anyhow = "*"
notion-client = "1"
chrono = "*"
chrono-tz = "*"
maplit = "*"
edit-distance = "2"
unidecode = "0.3"
