[package]
name = "lambda_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
    "eventbridge",
] }
stream_of_conciousness_bot = { path = ".." }
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
